# SDL2_2025

./: platform-blocktype.cpp  readme.md  readmydraw_real.cpp  readmydrawfile_insdl3.cpp  readmydrawfiles.cpp
SDL3/: SDL3_Draw.cpp  blocks_with_a_map.cpp  bounce_image.cpp  menutest1.cpp  sdl3_drawv2.cpp
animated_static_object/: anim1.cpp
cargame/: detect.cpp  readme.md
crop2/: spritesheet2.cpp
gcdraw/: convtosdl2.cpp
menuinfo/: createpopup.cpp  hint.cpp  menu1.cpp  readme.md
myhud/: hud1.cpp  hud2.cpp  readme.md
newspyhunter/release/: game
newspyhunter/src/: fullsh.cpp  fullsh.cpp~
plat1_test/release/: GameExe
plat1_test/src/: pt1.cpp
platform_scroller/: readme.md
platform_scroller/release/: GameExe  map.txt
platform_scroller/src/: plat.old  plat1.saved1  platformer1.cpp
power_crop/: crop.cpp  readme.md
qt/: readinqt.py
sdl3/: readme.md
sdl3/crapcodecheck/: video.cpp
sdl3/imagetest/src/: image.cpp
sdl3/menu1/: menu1.cpp
sdl3/menu1/src/: menu1.cpp
sdl3/menu2/src/: menu.cpp
sdl3/menu3/: hint1.cpp  pop.cpp
sdl3/sdl3_cmake/: CMakeLists.txt
sdl3/sdl3_cmake/Examples/: \  menu.cpp
space_shooter/release/: GameExe
space_shooter/src/: sh.cpp
spitesextractor/: extract.cpp
wateraffect/: readme.md  water.cpp
